Added profile page and user update functionality.  Also added ingredients.html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Oswald', sans-serif;
   letter-spacing: 1px; }
 
+header {
+  height: 50px;
+  margin: 0 0 50px; }
+
 h1,
 h2,
 h3,
@@ -10,6 +14,20 @@ h5,
 h6 {
   font-family: 'Mukta Malar', sans-serif;
   clear: both; }
+
+.container {
+  max-width: 1122px;
+  margin: 0 auto; }
+
+.row {
+  clear: both;
+  display: block;
+  width: 100%; }
+
+a,
+a:visited {
+  text-decoration: none;
+  color: #000; }
 
 nav,
 nav ul {
@@ -31,5 +49,33 @@ nav ul li {
 .logo {
   float: left;
   width: 100px; }
+
+ul {
+  list-style: none; }
+
+input,
+hr {
+  width: 300px;
+  margin: 5px 0; }
+
+.profile-pic {
+  width: 200px;
+  height: 200px; }
+
+.ingredient-img {
+  width: 75px;
+  height: 75px; }
+
+.ingredient-list-item {
+  display: inline-block;
+  float: left;
+  margin: 0 10px; }
+
+.clear-float {
+  clear: both; }
+
+.ingredient-row {
+  height: 86px;
+  margin: 0 auto 10px; }
 
 /*# sourceMappingURL=styles.css.map */
