Added functionality to add and update ingredients

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,4 +78,8 @@ hr {
   height: 86px;
   margin: 0 auto 10px; }
 
+.edit-ingredient-img {
+  width: 200px;
+  height: 200px; }
+
 /*# sourceMappingURL=styles.css.map */
