--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -105,3 +105,10 @@ hr {
     height: 86px;
     margin: 0 auto 10px;
 }
+
+//  Edit ingredients -----------------------------------------------------------
+
+.edit-ingredient-img {
+    width: 200px;
+    height: 200px;
+}
