--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,24 @@
         </nav>
     </header>
     
+    {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+    <div class="hide-me round-pop-up-container">
+        <div class="row center-text">
+            <p class="flashed-message center-div">
+                {{ message }}
+            </p>
+        </div>
+    <div class="row">
+        <button class="hide-me-btn center-div">Close</button>
+    </div>
+</div>
+{% endfor %} {% endif %} {% endwith %}
+    
     {% block content %}
     {% endblock %}
+    
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 </body>
 </html>
