--- a/templates/edit_ingredient.html
+++ b/templates/edit_ingredient.html
@@ -1,10 +1,4 @@
-{% extends 'base.html' %} {% block content %} {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
-<div class="row">
-    <p class="flashed-message">
-        {{ message }}
-    </p>
-</div>
-{% endfor %} {% endif %} {% endwith %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container">
     <div class="row">
