Created add_recipe.html and views

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -49,6 +49,9 @@ a:visited {
   border-radius: 25px;
   margin-top: 20px; }
 
+.hidden-div {
+  display: none; }
+
 nav,
 nav ul {
   margin: 5px;
@@ -83,11 +86,12 @@ nav ul li {
   -webkit-box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
-  background-color: #8adade; }
+  background-color: #8adade;
+  z-index: 100; }
 
 .flashed-message {
   width: 70%;
-  margin-top: 40%; }
+  margin-top: 30%; }
 
 ul {
   list-style: none; }
@@ -105,22 +109,26 @@ hr {
   height: 50px;
   margin: 0 0 20px; }
 
+.recipe-list-item,
 .ingredient-list-item {
   display: inline-block;
   float: left;
   margin: 0 10px;
   width: 400px; }
 
+.recipe-img,
 .ingredient-img {
   width: 75px;
   height: 75px; }
 
+.recipe-list-item,
 .ingredient-list-item {
   display: inline-block;
   float: left;
   margin: 0 10px;
   width: 200px; }
 
+.recipe-row,
 .ingredient-row {
   height: 86px;
   margin: 0 auto 10px; }
