--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,7 +27,7 @@
                     <li><label for="user_photo">Your Photo Image Address</label></li>
                     <li><input id="user_photo" name="user_photo" type="text" value="{{ user.user_photo }}"></li>
                     <hr>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Update</button>
                 </ul>
             </div>
         </form>
