--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -34,7 +34,7 @@ h6 {
 a, 
 a:visited {
     text-decoration: none;
-    color: #000;
+    color: #ffffff;
 }
 
 .center-div {
@@ -55,6 +55,10 @@ a:visited {
     background-color: #fff;
 }
 
+.uppercase {
+    text-transform: uppercase;
+}
+
 // Buttons ---------------------------------------------------------------------
 
 .hide-me-btn {
@@ -68,7 +72,65 @@ a:visited {
     display: none;
 }
 
+.div-btn {
+    width: 75px;
+    height: 20px;
+    float: right;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+button,
+.div-btn {
+	-moz-box-shadow:inset 0px -3px 7px 0px #29bbff;
+	-webkit-box-shadow:inset 0px -3px 7px 0px #29bbff;
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
+	background:-moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa',GradientType=0);
+	background-color:#2dabf9;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #0b0e07;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+}
+
+button:hover,
+.div-btn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
+	background:-moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9',GradientType=0);
+	background-color:#0688fa;
+}
+
+button:active,
+.div-btn:active {
+	position:relative;
+	top:1px;
+}
+
 // Header Styling --------------------------------------------------------------
+
+header {
+    color: #ffffff;
+    background-color: #0688fa;
+}
 
 nav,
 nav ul {
@@ -192,4 +254,9 @@ hr {
 .edit-ingredient-img {
     width: 200px;
     height: 200px;
+}
+
+.instructions-box {
+    width: 600px;
+    height: 300px;
 }
