--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
+<input class="hidden-div user-value" value="{{ user._id }}"></div> 
+
 <div class="container">
     <div class="sticky-div">
         <h1>Recipes list</h1>
@@ -23,9 +25,19 @@
                 <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
             </div>
             <p class="recipe-list-item">{{ recipe.recipe_name }}</p>
+            <a class="delete-recipe-btn" id="{{ recipe.author }}"><div class="div-btn center-text">Delete</div></a>
+            <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container">
+                <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
+                <div class="row">
+                    <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button> 
+                    <a href="{{ url_for('recipes', username=username) }}" class="cancel-delete-recipe-btn div-btn center-text center-div">
+                        <p>Cancel</p>
+                    </a> 
+                </div>
+            </form>
+            <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" id="{{ recipe.author }}"><div class="div-btn center-text">Edit</div></a>
         </li>
         {% endfor %}
     </ul>
-
 </div>
 {% endblock %}
