--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,50 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 body {
   font-family: 'Oswald', sans-serif;
   letter-spacing: 1px; }
@@ -104,6 +151,9 @@ button:active,
   position: relative;
   top: 1px; }
 
+.submit-new-ingredient-btn {
+  width: 20%; }
+
 header {
   color: #ffffff;
   background-color: #0688fa; }
@@ -204,7 +254,25 @@ hr {
   height: 200px; }
 
 .instructions-box {
-  width: 600px;
+  width: 90%;
   height: 300px; }
+
+th,
+td {
+  width: 30%;
+  text-align: left; }
+
+.column {
+  width: 50%;
+  float: left; }
+
+.fa-plus-square {
+  font-size: 40px;
+  color: #00f500;
+  cursor: pointer; }
+
+.ingredient-box {
+  width: 40%;
+  margin: 0 5px 20px 0; }
 
 /*# sourceMappingURL=styles.css.map */
