--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -8,39 +8,66 @@
         <p>Please edit any details of your recipe below...</p>
     </div>
     <div class="row">
+
         <form action="{{ url_for('update_recipe', recipe_id=this_recipe._id) }}" method="POST">
             <div class="row">
-                <ul class="new-user-form">
-                    <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
-                    <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
-                    <li><label for="recipe_name">Recipe Name</label></li>
-                    <li><input id="recipe_name" name="recipe_name" value="{{ this_recipe.recipe_name }}" type="text" required></li>
-                    <hr>
-                    <li>
-                        <div class="recipe-list-item">
-                            <img class="recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
-                        </div>
-                    </li> 
-                    <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
-                    <li><input id="recipe_image_url" name="recipe_image_url" value="{{ this_recipe.recipe_image_url }}" type="text" required></li>
-                    <hr>
-                    <li><label for="cusine">Cusine Category</label></li>
-                    <li>
-                        <select id="cusine" name="cusine" " required>
-                            <option value="{{ this_recipe.cusine }}" selected>{{ this_recipe.cusine }}</option>
-                            {% for cusine in cusines %}
-                            <option value="{{ cusine }}">{{ cusine }}</option>
-                            {% endfor %}
-                        </select>
-                    </li>
-                    <li><label for="recipe_instructions">Recipe Instructions</label></li>
-                    <li><textarea id="recipe_instructions" name="recipe_instructions" class="instructions-box" type="text" required>{{ this_recipe.recipe_instructions }}</textarea></li>
-                    <hr>
-                    <button type="submit">Update Recipe</button>
-                    <a href="{{ url_for('recipes', username=username) }}" class="go-back-btn div-btn center-text center-div">
-                        <div>Go back</div>
-                    </a>
-                </ul>
+                <div class="column">
+                    <ul class="new-user-form">
+                        <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
+                        <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
+                        <li><label for="recipe_name">Recipe Name</label></li>
+                        <li><input id="recipe_name" name="recipe_name" value="{{ this_recipe.recipe_name }}" type="text" required></li>
+
+                        <hr>
+                        <li>
+                            <div>
+                                <img class="recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
+                            </div>
+                        </li>
+                        <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
+                        <li><input id="recipe_image_url" name="recipe_image_url" value="{{ this_recipe.recipe_image_url }}" type="text" required></li>
+
+                        <hr>
+                        <li><label for="cusine">Cusine Category</label></li>
+                        <li>
+                            <select id="cusine" name="cusine" required>
+                                <option value="{{ this_recipe.cusine }} " selected>{{ this_recipe.cusine }}</option>
+                                {% for cusine in cusines %}
+                                <option value="{{ cusine }} ">{{ cusine }}</option>
+                                {% endfor %}
+                            </select>
+                        </li>
+                        <li><label for="instructions ">Recipe Instructions</label></li>
+                        <li><textarea id="instructions " name="instructions " class="instructions-box " type="text " required>{{ this_recipe.instructions }}</textarea></li>
+                        <hr>
+                        <button class="update-recipe-btn " type="submit ">Update Recipe</button>
+                        <a href="{{ url_for( 'edit_recipe_ingredients', username=username, recipe_id=this_recipe._id) }} " class="add-ingredient-to-recipe-btn div-btn center-text center-div ">
+                            <div>Add ingredients</div>
+                        </a>
+                        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
+                            <div>Go back</div>
+                        </a>
+                    </ul>
+                </div>
+                <div class="column ">
+                    <h2>Ingredients</h2>
+                    {% if this_recipe.recipe_ingredients %}
+                    <table>
+                        <tr>
+                            <th>Ingredient</th>
+                            <th>Quantity</th>
+                        </tr>
+                        {% for ingredient in this_recipe.recipe_ingredients %} {% for key, value in ingredient.iteritems() %}
+                        <tr>
+                            <td>{{ key }}</td>
+                            <td>{{ value }}</td>
+                        </tr>
+                        {% endfor %} {% endfor %}
+                    </table>
+                    {% else %}
+                    <p>You currently have no ingredients added</p>
+                    {% endif %}
+                </div>
             </div>
         </form>
     </div>
