--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %} {% block content %}
 
-<input class="hidden-div user-value" value="{{ user._id }}"></div> 
-
 <div class="container">
     <div class="sticky-div">
         <h1>Recipes list</h1>
@@ -18,6 +16,7 @@
             </li>
         </ul>
     </div>
+    {{ recipes_list[] }}
     <ul>
         {% for recipe in recipes_list %}
         <li class="clear-float recipe-row">
@@ -25,6 +24,7 @@
                 <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
             </div>
             <p class="recipe-list-item">{{ recipe.recipe_name }}</p>
+            {% if recipe.author == user_id %}
             <a class="delete-recipe-btn" id="{{ recipe.author }}"><div class="div-btn center-text">Delete</div></a>
             <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container">
                 <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
@@ -36,6 +36,7 @@
                 </div>
             </form>
             <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" id="{{ recipe.author }}"><div class="div-btn center-text">Edit</div></a>
+            {% endif %}
         </li>
         {% endfor %}
     </ul>
