--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -20,6 +20,12 @@ h5,
 h6 {
     font-family: 'Mukta Malar', sans-serif;
     clear: both;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+h1 {
+    font-size: 42px;
 }
 
 .container {
@@ -31,6 +37,10 @@ h6 {
     clear: both;
     display: block;
     width: 100%;
+}
+
+p {
+    margin: 10px 0;
 }
 
 a, 
@@ -107,6 +117,7 @@ button,
 	padding:9px 23px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #263666;
+	margin: 10px 0;
 }
 
 button:hover,
@@ -162,6 +173,7 @@ nav ul li {
 .logo {
     float: left;
     width: 100px;
+    margin: 5px;
 }
 
 // Message containers ----------------------------------------------------------
