--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -34,6 +34,9 @@
                 </ul>
             </div>
         </form>
+        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
+            <div>Go back</div>
+        </a>
     </div>
 </div>
 
