--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -11,63 +11,79 @@
 
         <form action="{{ url_for('update_recipe', recipe_id=this_recipe._id) }}" method="POST">
             <div class="row">
-                <div class="column">
-                    <ul class="new-user-form">
-                        <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
-                        <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
-                        <li><label for="recipe_name">Recipe Name</label></li>
-                        <li><input id="recipe_name" name="recipe_name" value="{{ this_recipe.recipe_name }}" type="text" required></li>
+                <section class="recipe-details-section">
+                    <div class="column">
+                        <ul class="new-user-form">
+                            <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
+                            <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
+                            <input class="hidden-div recipe-id" type="text" id="recipe-id" name="recipe-id" value="{{ this_recipe._id }}">
+                            <li><label for="recipe_name">Recipe Name</label></li>
+                            <li><input id="recipe_name" name="recipe_name" value="{{ this_recipe.recipe_name }}" type="text" required></li>
 
-                        <hr>
-                        <li>
-                            <div>
-                                <img class="recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
-                            </div>
-                        </li>
-                        <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
-                        <li><input id="recipe_image_url" name="recipe_image_url" value="{{ this_recipe.recipe_image_url }}" type="text" required></li>
+                            <hr>
+                            <li>
+                                <div>
+                                    <img class="recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
+                                </div>
+                            </li>
+                            <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
+                            <li><input id="recipe_image_url" name="recipe_image_url" value="{{ this_recipe.recipe_image_url }}" type="text" required></li>
 
-                        <hr>
-                        <li><label for="cusine">Cusine Category</label></li>
-                        <li>
-                            <select id="cusine" name="cusine" required>
-                                <option value="{{ this_recipe.cusine }} " selected>{{ this_recipe.cusine }}</option>
+                            <hr>
+                            <li><label for="cusine">Cusine Category</label></li>
+                            <li>
+                                <select id="cusine" name="cusine" required>
+                                <option value="{{ this_recipe.cusine }}" selected>{{ this_recipe.cusine }}</option>
                                 {% for cusine in cusines %}
                                 <option value="{{ cusine }} ">{{ cusine }}</option>
                                 {% endfor %}
                             </select>
-                        </li>
-                        <li><label for="instructions ">Recipe Instructions</label></li>
-                        <li><textarea id="instructions " name="instructions " class="instructions-box " type="text " required>{{ this_recipe.instructions }}</textarea></li>
-                        <hr>
-                        <button class="update-recipe-btn " type="submit ">Update Recipe</button>
-                        <a href="{{ url_for( 'edit_recipe_ingredients', username=username, recipe_id=this_recipe._id) }} " class="add-ingredient-to-recipe-btn div-btn center-text center-div ">
-                            <div>Add ingredients</div>
-                        </a>
-                        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
-                            <div>Go back</div>
-                        </a>
-                    </ul>
-                </div>
-                <div class="column ">
-                    <h2>Ingredients</h2>
-                    {% if this_recipe.recipe_ingredients %}
-                    <table>
-                        <tr>
-                            <th>Ingredient</th>
-                            <th>Quantity</th>
-                        </tr>
-                        {% for ingredient in this_recipe.recipe_ingredients %} {% for key, value in ingredient.iteritems() %}
-                        <tr>
-                            <td>{{ key }}</td>
-                            <td>{{ value }}</td>
-                        </tr>
-                        {% endfor %} {% endfor %}
-                    </table>
-                    {% else %}
-                    <p>You currently have no ingredients added</p>
-                    {% endif %}
-                </div>
+                            </li>
+                            <li><label for="instructions">Recipe Instructions</label></li>
+                            <li><textarea id="instructions" name="instructions" class="instructions-box" type="text" required>{{ this_recipe.instructions }}</textarea></li>
+                            <hr>
+                            <button class="update-recipe-btn " type="button">Update Recipe</button>
+                            <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
+                                <div>Go back</div>
+                            </a>
+                        </ul>
+                    </div>
+                </section>
+                <section class="recipe-ingredients-section">
+                    <div class="column ">
+                        <h2>Ingredients</h2>
+                        {% if recipe_ingredients %}
+                        <table>
+                            <tr class="ingredients-table-header">
+                                <th>Ingredient</th>
+                                <th>Quantity</th>
+                            </tr>
+                            {% for ingredient in recipe_ingredients %}
+                            {% for key, value in ingredient.iteritems() %}
+                            <tr class="ingredients-table-content">
+                                <th>{{ key }}</th>
+                                <th>{{ value }}</th>
+                            </tr>
+                            {% endfor %}
+                            {% endfor %}
+                        </table>
+                        {% else %}
+                        <p>You currently have no ingredients added</p>
+                        {% endif %}
+
+                        <h3>Add additional ingredients</h3>
+                        <div class="new-ingredient-container column">
+                            <select class="ingredient-box" id="ingredient_name" name="ingredient_name" required>
+                                <option value="{{ ingredients.ingredient_name }}" selected>Select an ingredient to add...</option>
+                                {% for ingredient in ingredients %}
+                                <option value="{{ ingredient._id }} ">{{ ingredient.ingredient_name }}</option>
+                                {% endfor %}
+                            </select>
+                            <input class="ingredient-box" id="ingredient_quantity" name="ingredient_quantity" placeholder="Ingredient Quantity" type="text" required>
+                            <i class="update-recipe-btn fas fa-plus-square" type="button"></i>
+                        </div>
+                    </div>
+                </section>
             </div>
         </form>
     </div>
