--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -88,7 +88,7 @@ a:visited {
     width: 75px;
     height: 20px;
     float: right;
-    margin: 0 5px;
+    margin: 10px;
     cursor: pointer;
 }
 
@@ -117,7 +117,6 @@ button,
 	padding:9px 23px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #263666;
-	margin: 10px 0;
 }
 
 button:hover,
@@ -134,8 +133,7 @@ button:hover,
 
 button:active,
 .div-btn:active {
-	position:relative;
-	top:1px;
+	transform: scale(.95,.95);
 }
 
 .submit-new-ingredient-btn {
@@ -250,10 +248,14 @@ hr {
 
 .recipe-row,
 .ingredient-row {
-    height: 86px;
+height: 76px;
+    border: 1px black solid;
     margin: 0 auto 10px;
+    padding: 10px;
+    -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 }
-
 .checkbox-switch {
     width: 20px;
     display: block;
@@ -292,11 +294,19 @@ td {
     float: left;
 }
 
+.fa-minus-square,
 .fa-plus-square  {
     font-size: 40px;
-    color: #00f500;
     cursor: pointer;
-  }
+}
+  
+.fa-minus-square {
+    color: red;
+}
+
+.fa-plus-square {
+    color: #00f500;   
+}
   
 .ingredient-box {
     width: 40%;
