Added ability to add an ingredient while editing a recipe

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -281,6 +281,10 @@ height: 76px;
     height: 300px;
 }
 
+.new-ingredient-container {
+    min-height: 150px;
+}
+
 // Edit Recipes ----------------------------------------------------------------
 
 th,
