--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,19 +10,19 @@
             <div class="row">
                 <ul class="new-user-form">
                     <li><label for="first_name">First Name</label></li>
-                    <li><input id="first_name" name="first_name" type="text" value="{{ user.first_name }}"></li>
+                    <li><input id="first_name" name="first_name" type="text" value="{{ user.first_name.title() }}"></li>
                     <hr>
                     <li><label for="surname">Surname</label></li>
-                    <li><input id="surname" name="surname" type="text" value="{{ user.surname }}"></li>
+                    <li><input id="surname" name="surname" type="text" value="{{ user.surname.title() }}"></li>
                     <hr>
                     <li><label for="email">Email Address</label></li>
-                    <li><input id="email" name="email" type="email" value="{{ user.email }}"></li>
+                    <li><input id="email" name="email" type="email" value="{{ user.email.lower() }}"></li>
                     <hr>
                     <li><label for="password">Password</label></li>
                     <li><input id="password" required minlength="5" name="password" type="password" value="{{ user.password }}"></li>
                     <hr>
                     <li><label for="country">Country</label></li>
-                    <li><input id="country" name="country" type="text" value="{{ user.country }}"></li>
+                    <li><input id="country" name="country" type="text" value="{{ user.country.title() }}"></li>
                     <hr>
                     <li><label for="user_photo">Your Photo Image Address</label></li>
                     <li><input id="user_photo" name="user_photo" type="text" value="{{ user.user_photo }}"></li>
