--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,41 +8,55 @@
         <p>Alternatively, why not add your own and see if people like it?</p>
         <button><a href="{{ url_for('add_recipe') }}">Add recipe</a></button>
 
-        <ul>
-            <li class="list-headings">
+        <div class="row">
+            <div class="list-headings">
                 <label class="recipe-list-item" for="">Image</label>
                 <label class="recipe-list-item" for="">Recipe Name</label>
                 <label class="recipe-list-item" for="">Cookie Rating</label>
-            </li>
-        </ul>
-    </div>
-    {{ recipes_list[] }}
-    <ul>
-        {% for recipe in recipes_list %}
-        <li class="clear-float recipe-row">
-            <div class="recipe-list-item">
-            {% if recipe.recipe_image_url %}
-                <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
-            {% else %}
-                <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
-            {% endif %}
             </div>
-            <p class="recipe-list-item">{{ recipe.recipe_name }}</p>
-            {% if recipe.author == user_id %}
-            <a class="delete-recipe-btn" id="{{ recipe.author }}"><div class="div-btn center-text">Delete</div></a>
-            <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container">
-                <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
-                <div class="row">
-                    <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button> 
-                    <a href="{{ url_for('recipes', username=username) }}" class="cancel-delete-recipe-btn div-btn center-text center-div">
-                        <p>Cancel</p>
-                    </a> 
+        </div>
+    </div>
+    <div class="recipe-list row">
+        {% for recipe in recipes_list %}
+        <a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}" class="clickable-link">
+            <div class="clear-float recipe-row">
+                <div class="recipe-row-left">
+                    <div class="recipe-list-item">
+                        {% if recipe.recipe_image_url %}
+                        <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
+                        {% else %}
+                        <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
+                        {% endif %}
+                    </div>
+                    <p class="recipe-list-item">{{ recipe.recipe_name }}</p>
+
                 </div>
-            </form>
-            <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" id="{{ recipe.author }}"><div class="div-btn center-text">Edit</div></a>
-            {% endif %}
-        </li>
-        {% endfor %}
-    </ul>
+            </div>
+        </a>
+        {% if recipe.author == user_id %}
+        <div class="recipe-row">
+            <div class="recipe-row-right">
+                <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
+                <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container hide-me">
+                    <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
+                    <div class="row">
+                        <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
+                        <div class="cancel-delete-recipe-btn div-btn center-text center-div hide-me-btn">
+                            <p>Cancel</p>
+                        </div>
+                    </div>
+                </form>
+                <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
+                    <div class="div-btn center-text">Edit</div>
+                </a>
+            </div>
+        </div>
+        {% else %}
+        <div class="recipe-row">
+            <div class="recipe-row-right">
+            </div>
+        </div>
+        {% endif %} {% endfor %}
+    </div>
 </div>
 {% endblock %}
